# Humanoid_Pose_Optimization

./: CMakeLists.txt
include/pose_optimization_cpp/: kinematics.hpp  optimizer.hpp  robot_parameters.hpp
src/: kinematics.cpp  main.cpp  optimizer.cpp
